Update CI config

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,4 @@
-name: "Documentation"
+name: 'Documentation'
 
 on:
   push:
@@ -9,16 +9,18 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-
       - uses: actions/checkout@v1
-
-      - name: Check and build
-        uses: ammaraskar/sphinx-action@master
+      - uses: actions/setup-python@v2
         with:
-          docs-folder: docs/
-          build-command: make dirhtml
-          pre-build-command: 'pip3 install "poetry==1.1.6" && poetry install'
-
+          python-version: '3.9'
+      - name: Install dependencies
+        run: |
+          pip3 install "poetry==1.1.6"
+          poetry install
+      - name: Run Sphinx
+        run: |
+          cd docs
+          make dirhtml
       - name: Deploy
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
