--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,15 +13,13 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-      - name: Install dependencies
+      - name: Prepare and build Sphinx project
         run: |
           pip3 install "poetry==1.1.6"
           poetry install
-      - name: Run Sphinx
-        run: |
           cd docs
           make dirhtml
-      - name: Deploy
+      - name: Deploy to GitHub Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
         with:
