--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   docs:
     runs-on: ubuntu-latest
+    name: Build and deploy docs
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-python@v2
