--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - id: vars
-        vars:
+        env:
           REF: ${{ github.base_ref }}
         run: echo ::set-output image=docker.pkg.github.com/$GITHUB_REPOSITORY/server:$ref
       - env:
