--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,9 @@ jobs:
           images: ghcr.io/${{ github.repository }}
           tags: |
             type=ref,event=branch
+            type=ref,event=tag
             type=ref,event=pr
-            type=sha
+            type=sha,prefix=
       -
         name: Login to registry
         uses: docker/login-action@v1
