--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ inotifyrecursive = "^0.3.5"
 Pillow = "^8.2.0"
 psycopg2 = "^2.8.6"
 python-dateutil = "^2.8.1"
+rawpy = "^0.16.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.6b0"
