--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,29 +7,30 @@ license = "AGPLv3"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-Django = "^3.2.4"
+Django = "^3.2.6"
 blurhash-python = "^1.1.1"
 django-cors-headers = "^3.7.0"
 graphene-django = "^2.15.0"
 graphene-gis = "^0.0.6"
 inotifyrecursive = "^0.3.5"
-Pillow = "^8.2.0"
-psycopg2 = "^2.8.6"
-python-dateutil = "^2.8.1"
+Pillow = "^8.3.1"
+psycopg2 = "^2.9.1"
+python-dateutil = "^2.8.2"
 rawpy = "^0.16.0"
+py3exiv2 = "^0.9.3"
 
 [tool.poetry.dev-dependencies]
-black = "^21.6b0"
-isort = "^5.8.0"
+black = "^21.7b0"
+isort = "^5.9.3"
 freezegun = "^1.1.0"
 pytest = "^6.2.4"
 pytest-cov = "^2.12.1"
 pytest-django = "^4.4.0"
 PyYAML = "^5.4.1"
-hypothesis = "^6.14.0"
+hypothesis = "^6.14.5"
 selenium = "^3.141.0"
 pygments-graphql = {version = "^1.0.0", extras = ["docs"]}
-Sphinx = {version = "^4.0.2", extras = ["docs"]}
+Sphinx = {version = "^4.1.2", extras = ["docs"]}
 sphinx-rtd-theme = {version = "^0.5.2", extras = ["docs"]}
 
 [build-system]
