--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -7,7 +7,7 @@ runs:
     - name: Install system dependencies
       run: |
         sudo apt-get update -y
-        sudo apt-get install -y spatialite-bin libsqlite3-mod-spatialite binutils libproj-dev gdal-bin
+        sudo apt-get install -y spatialite-bin libsqlite3-mod-spatialite binutils libproj-dev gdal-bin libexiv2-dev libboost-python-dev
       shell: bash
     - name: Setup Poetry
       run: |
