--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ graphene-django = "^2.15.0"
 graphene-gis = "^0.0.6"
 inotifyrecursive = "^0.3.5"
 Pillow = "^8.3.1"
-psycopg2 = "^2.9.1"
+psycopg2-binary = "^2.9.1"
 python-dateutil = "^2.8.2"
 rawpy = "^0.16.0"
 py3exiv2 = "^0.9.3"
