--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ py3exiv2 = "^0.9.3"
 black = "^21.7b0"
 isort = "^5.9.3"
 freezegun = "^1.1.0"
+mypy = "^0.910"
 pytest = "^6.2.4"
 pytest-cov = "^2.12.1"
 pytest-django = "^4.4.0"
