Begin with type checking

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ share/python-wheels/
 MANIFEST
 
 # Installer logs
-pip-log.txt
+pip-log.txtm
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
@@ -43,6 +43,7 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+.mypy_cache/
 
 # Translations
 *.mo
