--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,11 @@ sphinx-rtd-theme = {version = "^0.5.2", extras = ["docs"]}
 types-freezegun = "^1.1.2"
 types-Pillow = "^8.3.7"
 types-python-dateutil = "^2.8.2"
+types-toml = "^0.10.1"
+types-typed-ast = "^1.4.5"
+types-backports = "^0.1.3"
+types-setuptools = "^57.4.2"
+types-six = "^1.16.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
