Continue with mypy configuration

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,12 @@
 [mypy]
+no_implicit_optional = True
+strict_equality = True
+warn_no_return = True
+warn_redundant_casts = True
+warn_return_any = True
+warn_unreachable = True
+warn_unused_configs = True
+warn_unused_ignores = True
 plugins = mypy_django_plugin.main, graphene_types.resolver_plugin
 
 [mypy.plugins.django-stubs]
