Update mypy config and patch Django

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,12 +1,22 @@
 [mypy]
-no_implicit_optional = True
 strict_equality = True
-warn_no_return = True
+
 warn_redundant_casts = True
+warn_unused_ignores = True
+warn_no_return = True
 warn_return_any = True
 warn_unreachable = True
 warn_unused_configs = True
-warn_unused_ignores = True
+
+disallow_any_generics = True
+disallow_subclassing_any = True
+disallow_untyped_calls = True
+disallow_untyped_defs = True
+disallow_incomplete_defs = True
+check_untyped_defs = True
+disallow_untyped_decorators = True
+no_implicit_optional = True
+
 plugins = mypy_django_plugin.main, graphene_types.resolver_plugin
 
 [mypy.plugins.django-stubs]
